--- a/drivers/contactless/Kconfig
+++ b/drivers/contactless/Kconfig
@@ -61,17 +61,12 @@ config CL_PN532_DEBUG_RX
 	default n
 	depends on DEBUG_CONTACTLESS
 
-choice
-  prompt "SPI bitorder control"
-  default CL_PN532_SW_BITORDER
-  ---help---
-    This option selects either software or hardware support for reverse SPI bitorder.
-config CL_PN532_SW_BITORDER
-  bool "Software"
-
 config CL_PN532_HW_BITORDER
-  bool "Hardware"
-endchoice
+  bool "SPI Hardware bitorder"
+  default n
+  depends on ARCH_HAVE_SPI_BITORDER
+  --help--
+    The PN532 requires LSB bit order. Some architectures can setup their SPI to do this in hardware. When disabled, this will be done in software.
 
 endif # CL_PN532
 
